Contact Us Center Align, Fix Margin and Mobile Check commit

--- a/css/style.css
+++ b/css/style.css
@@ -204,11 +204,11 @@ footer {
 }
 
 .contact-text-box[type=text]:focus {
-  width: 70%;
   border: 0.1rem solid #f16668;
   border-radius: 1.5rem;
   padding: 0.8rem 0.5rem;
   outline-width: 0;
+  width: 100%;
 }
 
 .contact-text-box[type=text] {
@@ -218,9 +218,9 @@ footer {
   margin-bottom: 1rem;
   margin-top: 0.5rem;
   outline-width: 0;
-  width: 70%;
   clear: both;
   font-size: 1em;
+  width: 100%;
 }
 
 .contact-textarea {
@@ -231,7 +231,7 @@ footer {
   margin-bottom: 1rem;
   margin-top: 0.5rem;
   outline-width: 0;
-  width: 70%;
+  width: 100%;
   height: 10rem;
   resize: vertical;
   clear: both;
@@ -918,6 +918,16 @@ footer {
   width: 100%;
   margin: 0;
   padding: 0.5rem 0.5rem;
+}
+
+.form-group {
+  width: 700px;
+  max-width: 90%;
+  margin: 0 auto;
+}
+
+.form-submit {
+  text-align: center;
 }
 
 /*
